# rct3-importer

./: RCT3 Importer.workspace  README.md  build-instructions.txt
RCT3 Importer/doc/: docbook.css  readme.txt
RCT3 Importer/doc/advanced tutorial/: adv_texture.xcf  advanced_tutorial.xml
RCT3 Importer/doc/beginner tutorial/: beginner tutorial.xml  beginner_tutorial.de.xml  beginner_tutorial.fr.xml  beginner_tutorial.xml  model.xcf
RCT3 Importer/doc/callouts/: base.xcf
RCT3 Importer/doc/development/: codelite-environment.txt
RCT3 Importer/doc/docbook/: xhtml.xsl
RCT3 Importer/include/: animatedride.h  attraction.h  boneanim.h  boneshape.h  boost_unordered_extension.h  car.h  carrieditems.h  counted_array_ptr.h  counted_ptr.h  cryptoguid.h  flexitexture.h  guiicon.h  icontexture.h  manifoldmesh.h  model.h  morphmesh.h  ovlstructs.h  path.h  pretty.h  rct3basetypes.h  rct3constants.h  scenery.h  sceneryold.h  sceneryrevised.h  sceneryvisual.h  sharedride.h  spline.h  stall.h  staticshape.h  terraintype.h  trackedride.h  tracksection.h  train.h  vertex.h  wildanimalitem.h  win_predefine.h  xmldefs.h
RCT3 Importer/src/Injector/: wxsha.h  (+8 more)
RCT3 Importer/src/libASE-1.0/: ASElexer.c  ASElexer.l  AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.win  README  aclocal.m4  configure  configure.ac  libASE.cbp  libASE.dev  libASE.h  libASE.project  libASE.vcproj  libASEconfig.h.in  libASEtest.c  loader.c  symbols.h
RCT3 Importer/src/libASE-1.0/visualstudio/: ASElexer.c
Utilities/autover/: autover.project  main.cpp
Utilities/bin2c/: bin2c.cbp  bin2c.project  main.c
(+662 files in other folders)
